# rust-aoc-runner

./: .gitignore  Cargo.toml  README.md
examples/: aoc_2020_day01.rs  day_with_macros.rs  dayxx.rs
src/aoc/: macro.rs  mod.rs  solution.rs
