[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

[lib]
path="src/aoc/mod.rs"
name="aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.30"
concat-idents = "1.1.3"
crossbeam-utils="0.8.7"
humantime="2.1.0"