[package]
name = "aoc-runner"
version = "1.0.0"
edition = "2021"
license = "GPL-3"
description = "Rust Tools for Advent of Code challenges. Focus on writting solutions, not the daily boilerplate."
readme = "README.md"
homepage = "https://github.com/ArmandDu/rust-aoc-runner"
repository = "https://github.com/ArmandDu/rust-aoc-runner"
keywords = ["aoc", "advent-of-code", "utility"]

[lib]
path="src/aoc/mod.rs"
name="aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.30"
concat-idents = "1.1.3"
crossbeam-utils="0.8.7"
humantime="2.1.0"

[dev-dependencies]
itertools = "0.12.0"